support simple run config

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -37,5 +37,6 @@
         <lang.syntaxHighlighterFactory
             language="Iceberg"
             implementationClass="iceberg.IcebergSyntaxHighlighterFactory"/>
+        <configurationType implementation="iceberg.run.IcebergRunConfigurationType"/>
     </extensions>
 </idea-plugin>
