code completion for keywords

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -42,5 +42,8 @@
         <runLineMarkerContributor
             language="Iceberg"
             implementationClass="iceberg.run.IcebergRunLineMarkerContributor"/>
+        <completion.contributor
+            language="Iceberg"
+            implementationClass="iceberg.IcebergCompletionContributor"/>
     </extensions>
 </idea-plugin>
