add simple semantic annotator

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -48,5 +48,8 @@
         <lang.commenter
             language="Iceberg"
             implementationClass="iceberg.IcebergCommenter"/>
+        <externalAnnotator
+            language="Iceberg"
+            implementationClass="iceberg.IcebergSemanticAnnotator"/>
     </extensions>
 </idea-plugin>
