add simple goto jumps

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -21,6 +21,7 @@
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.java</depends>
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
@@ -51,5 +52,7 @@
         <externalAnnotator
             language="Iceberg"
             implementationClass="iceberg.IcebergSemanticAnnotator"/>
+        <gotoDeclarationHandler
+            implementation="iceberg.IcebergGotoDeclarationHandler"/>
     </extensions>
 </idea-plugin>
